fdo#52475 fix import of RTF_CHCBPAT with value 0

0 means auto, and for fdo#50539, this value was ignored. However a next
sample shows that we should send something to the dmapper: COL_AUTO.

Change-Id: I8d7d35125c9027dfb45288bbfbfa81ba4799e78d